--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-						
+						<!--
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -148,13 +148,13 @@
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
-							
+							-->
 							<ul class="contact">
 								<li class="icon solid fa-home">
 									Gold Coast, Queensland, Australia
 								</li>
 								<li class="icon solid fa-envelope"><a href="#">contactwebbonpc@gmail.com</a></li>
-								<li class="icon brands fa-linkedin"><a href="#">www.linkedin.com/in/matthew-webb-1a52b3151</a></li>
+								<li class="icon brands fa-linkedin"><a href="www.linkedin.com/in/matthew-webb-1a52b3151">www.linkedin.com/in/matthew-webb-1a52b3151</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
