--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 									Gold Coast, Queensland, Australia
 								</li>
 								<li class="icon solid fa-envelope"><a href="#">contactwebbonpc@gmail.com</a></li>
-								<li class="icon brands fa-linkedin"><a href="www.linkedin.com/in/matthew-webb-1a52b3151">www.linkedin.com/in/matthew-webb-1a52b3151</a></li>
+								<li class="icon brands fa-linkedin"><a href="http://www.linkedin.com/in/matthew-webb-1a52b3151">www.linkedin.com/in/matthew-webb-1a52b3151</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
